--- a/20211028_jupyter.ipynb
+++ b/20211028_jupyter.ipynb
@@ -40,6 +40,15 @@
     "b = 2384\n",
     "a + b"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24bda80c",
+   "metadata": {},
+   "source": [
+    " - 노트북 파일 확장자 ~.ipynb\n",
+    " - 일반 파이썬 확장자 ~.py "
+   ]
   }
  ],
  "metadata": {
