--- a/20211028_jupyter.ipynb
+++ b/20211028_jupyter.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a361cbda",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello world\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"hello world\")"
    ]
@@ -21,25 +13,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3b0b381",
+   "id": "ace32c28",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "268f44b6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a=...10...b=...2384...a + b...2394k"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 10 \n",
     "b = 2384\n",
@@ -49,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2197920",
+   "id": "ed53e3ae",
    "metadata": {},
    "source": [
     " - 노트북 파일 확장자 ~.ipynb\n",
@@ -58,18 +42,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "fb72be7e",
+   "execution_count": null,
+   "id": "d2af3f17",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['False', 'None', 'True', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield'] test\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#키워드 출력\n",
     "import keyword\n",
@@ -78,21 +54,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "c99c880d",
+   "execution_count": null,
+   "id": "7a4aa274",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "13"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#주석 처리 \n",
     "'''주석\n",
@@ -103,28 +68,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "fa37d449",
+   "execution_count": null,
+   "id": "7c80ddd5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#하나만 출력합니다.\n",
-      "Hello Python Programming...!\n",
-      "\n",
-      "#여러 개를 출력합니다.\n",
-      "안녕하세요 저의 이름은 김동진입니다.\n",
-      "\n",
-      "#아무 것도 출력하지 않습니다.\n",
-      "---확인 전용선---\n",
-      "\n",
-      "\n",
-      "---확인 전용선---\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# print() prac. \n",
     "# 하나만 출력 합니다. \n",
@@ -134,6 +81,7 @@
     "\n",
     "#여러 개를 출력합니다. \n",
     "print(\"#여러 개를 출력합니다.\")\n",
+    "print(\"10, 20, 30, 40, 50\")\n",
     "print(\"안녕하세요\",\"저의\",\"이름은\",\"김동진입니다.\")\n",
     "print()\n",
     "    \n",
@@ -148,7 +96,245 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dc3deb0",
+   "id": "dbb01929",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 특수 문자 출력 \n",
+    "print (\"\\t 안녕하세요 \\t ~~~\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05751534",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 연습문제 \n",
+    "print (\"이름 \\t 나이 \\t 지역\")\n",
+    "print (\"윤인성 \\t 25 \\t 강서구\")\n",
+    "print (\"윤아린 \\t 24 \\t 강서구\")\n",
+    "print (\"구름 \\t 3 \\t 강서구\\\\\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4587df27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#여러 라인의 문자열 만들기 \n",
+    "print(\"동해물과 \\n백두산이 \\n마르고 \\n닳도톡 \\n하느님이 \")\n",
+    "print('''동해물과\n",
+    "백두산이\n",
+    "마르고\n",
+    "닳도톡\n",
+    "하느님이 ''')\n",
+    "print(\"\"\"동해물과\n",
+    "백두산이\n",
+    "마르고\n",
+    "닳도톡\n",
+    "하느님이\"\"\")\n",
+    "print(\"a_str\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3bf9954",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#문자열 연산자 '+', '*'\n",
+    "#문자열 + 문자열 => 문자열 이어 붙이기 \n",
+    "#문자열 * 숫자 => 문자열 숫자만큼 반복\n",
+    "print(\"안녕\"+\"하세요\")\n",
+    "print(3*\"안녕하세요\")\n",
+    "print(\"안녕하세요\"*3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "998e8d5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#문자열 index 및 slice => str[0] : 0번지 값, str[start : end]\n",
+    "str = \"안녕하세요\"\n",
+    "print(str)\n",
+    "print(str[0],str[2]) #안 하\n",
+    "print(str[-1], str[-5]) #요 안 \"특히나 -1은 데이터 수집을 위해 많이 쓰임\"\n",
+    "print(str[1:4]) #녕하세\n",
+    "# print(str[5]) => index out of range\n",
+    "# len 함수는 문자열의 길이를 구하는 함수. \n",
+    "print(len(str))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad117cbb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# str = \"임의의 문자열을 넣으세요\"\n",
+    "# str의 길이를 구해서 처음 문자를 -index로 구해서 출력하세요 \n",
+    "\n",
+    "str = \"this time will be great to me\" \n",
+    "print(str[0],\":\",str[-len(str)])\n",
+    "str_len = len(str)\n",
+    "print(str[-str_len])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db183994",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 숫자 : 정수, 실수\n",
+    "# 연산자 : +, -, *, /, //(몫), %(나머지), **(거듭제곱)\n",
+    "# 연산 시, ()를 이용해서 우선순위 결정 가능\n",
+    "# 다음 레이어 대신 ; 을 이용해서 동일한 결과 출력 가능\n",
+    "print(\"10 + 5 : \", 10 + 5)\n",
+    "print(\"10 - 5 : \", 10 - 5)\n",
+    "print(\"10 * 5 : \", 10 * 5)\n",
+    "print(\"10 / 5 : \", 10 / 5); print(\"10 // 5 : \", 10 // 5)\n",
+    "print(\"10 % 5 : \", 10 % 5); print(\"10 ** 5 : \", 10 ** 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b42bcd16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 변수 : 값을 저장하는 공간\n",
+    "pi = 3.14\n",
+    "\n",
+    "print(pi + 2)\n",
+    "print(pi - 2)\n",
+    "print(int(pi * 2))\n",
+    "print(int(pi ** 2))\n",
+    "print(str(10) + \"abcd\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "40361f65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num =  200\n",
+      "str :  abcdtestabcdtest\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 복합대입연산자 \n",
+    "num = 100\n",
+    "num += 100\n",
+    "print(\"num = \", num) #200 출력\n",
+    "\n",
+    "str = \"abcd\"\n",
+    "str += \"test\"\n",
+    "str *= 2\n",
+    "print(\"str : \", str ) \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "325f2a46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "문자열을 입력하세요> 점점 재미있어진다.\n",
+      "점점 재미있어진다.\n",
+      "문자열의 길이는 :  10\n",
+      "처음 문자는 :  점 마지막 문자는 :  .\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 키보드로 부터 데이터를 입력 받는 함수는 input() 입니다.\n",
+    "\n",
+    "# str = input(\"문자열 입력 필요> \")\n",
+    "# print(str)\n",
+    "      \n",
+    "# 문자열을 입력 받아 문자열의 길이를 출력하고, 처음 글자와 마지막 글자를 출력하세요\n",
+    "\n",
+    "str = input(\"문자열을 입력하세요> \")\n",
+    "\n",
+    "print(str)\n",
+    "print(\"문자열의 길이는 : \", len(str))\n",
+    "print(\"처음 문자는 : \", str[0], \"마지막 문자는 : \", str[len(str)-1])\n",
+    "\n",
+    "#- 입력을 하지 않으면 *상태로 걸려 있는데, \n",
+    "# 정지 버튼을 누르면 해당 cell이 더이상 대기하지 않고 멈춘다. \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6dab823b",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input the first figure : 10\n",
+      "input the second figure : 2\n",
+      "두 수를 더하면 >  12\n",
+      "두 수를 빼면 >  8\n",
+      "두 수를 곱하면 >  20\n",
+      "두 수를 나누면 >  5.0\n",
+      "임의의 문자열을 입력하세요 : ㅁ\n",
+      "처음 입력 받은 숫자만큼 입력된 문자를 반복합니다. : \n",
+      "ㅁㅁㅁㅁㅁㅁㅁㅁㅁㅁ\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 숫자 두 개를 입력 받아 실수형으로 바꾸고 \n",
+    "# 두 수의 사칙연산을 출력하세요. \n",
+    "# 문자열을 입력 받아 처음 입력 받은 숫자만큼 반복해서 출력하세요. \n",
+    "\n",
+    "num1 = int(input(\"input the first figure : \"))\n",
+    "num2 = int(input(\"input the second figure : \"))\n",
+    "\n",
+    "print(\"두 수를 더하면 > \", num1 + num2)\n",
+    "print(\"두 수를 빼면 > \", num1 - num2)\n",
+    "print(\"두 수를 곱하면 > \", num1 * num2)\n",
+    "print(\"두 수를 나누면 > \", num1 / num2)\n",
+    "\n",
+    "input_str = input(\"임의의 문자열을 입력하세요 : \")\n",
+    "\n",
+    "print(\"처음 입력 받은 숫자만큼 입력된 문자를 반복합니다. : \")\n",
+    "print(num1*input_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f321049e",
    "metadata": {},
    "outputs": [],
    "source": []
