--- a/output.ipynb
+++ b/output.ipynb
@@ -2,10 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "592e078c",
+   "execution_count": 1,
+   "id": "104b2570",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#하나만 출력합니다.\n",
+      "Hello Python Programming...!\n",
+      "\n",
+      "#여러 개를 출력합니다.\n",
+      "10, 20, 30, 40, 50\n",
+      "안녕하세요 저의 이름은 김동진입니다.\n",
+      "\n",
+      "#아무 것도 출력하지 않습니다.\n",
+      "---확인 전용선---\n",
+      "\n",
+      "\n",
+      "---확인 전용선---\n"
+     ]
+    }
+   ],
    "source": [
     "# print() prac. \n",
     "# 하나만 출력 합니다. \n",
@@ -15,6 +34,7 @@
     "\n",
     "#여러 개를 출력합니다. \n",
     "print(\"#여러 개를 출력합니다.\")\n",
+    "print(\"10, 20, 30, 40, 50\")\n",
     "print(\"안녕하세요\",\"저의\",\"이름은\",\"김동진입니다.\")\n",
     "print()\n",
     "    \n",
@@ -25,6 +45,14 @@
     "print()\n",
     "print(\"---확인 전용선---\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c39b0b8d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
