--- a/20211029.ipynb
+++ b/20211029.ipynb
@@ -219,7 +219,18 @@
    "id": "99fabc7d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# and or not == != > < <= >= \n",
+    "\n",
+    "a = 10\n",
+    "b = 20\n",
+    "print(a==b) # False\n",
+    "print(a!=b) # True\n",
+    "print(a>b) # False\n",
+    "print(a<b) # \n",
+    "print(a>=b)\n",
+    "print(a<=b)"
+   ]
   }
  ],
  "metadata": {
