--- a/20211029.ipynb
+++ b/20211029.ipynb
@@ -190,19 +190,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "bd51b045",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "input data!! : > abcd test c 10 30\n",
-      "abcd test c 10 30 \t second data abcd\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 키보드로부터 테이터를 입력받아 공백으로 데이터를 분리하고\n",
     "# 2번째 입력된 자료를 출력하세요. \n",
@@ -222,15 +213,186 @@
    "source": [
     "# and or not == != > < <= >= \n",
     "\n",
-    "a = 10\n",
-    "b = 20\n",
+    "a = 10 ; b = 20\n",
     "print(a==b) # False\n",
     "print(a!=b) # True\n",
     "print(a>b) # False\n",
-    "print(a<b) # \n",
-    "print(a>=b)\n",
-    "print(a<=b)"
+    "print(a<b) # True\n",
+    "print(a>=b) # False\n",
+    "print(a<=b) # True\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91a68efa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# if 조건식 : => 조건식에 연관된 것은 들여쓰기하여 처리한다. \n",
+    "\n",
+    "if True : \n",
+    "    print(\"if 문장 실행\") # 실행됨. \n",
+    "\n",
+    "if False : \n",
+    "    print(\"if false 실행\") # 실행되지 않음. \n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a8fb980",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 정수를 입력 받아 10보다 작으면 입력된 값 출력\n",
+    "# 1. 정수 입력을 받음. \n",
+    "# 2. 숫자인지 확인 isnumeric() or isdecimal\n",
+    "# 3. 숫자이면 문자를 숫자로 변경\n",
+    "# 4. 10보다 작으면 출력 \n",
+    "\n",
+    "digit_1 = input(\"숫자를 입력하세요 >\")\n",
+    "\n",
+    "if digit_1.isdecimal():\n",
+    "    digit_1 = int(digit_1)\n",
+    "    if digit_1 < 10 : \n",
+    "        print(\"input number : {:+5d} \".format(digit_1))\n",
+    "\n",
+    "print(\"end\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5358b9e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 숫자를 입력 받아 실수로 변환한 후, \n",
+    "# 0보다 크면, 양수, 작으면 음수 0이면 zero를 출력 하세요. \n",
+    "\n",
+    "num_1 = input(\"input number : >\") \n",
+    "# input으로 입력되는 값은 모두 기본적으로 문자열이므로, 이를 int 또는 float으로 숫자 값으로 변경 필수\n",
+    "\n",
+    "if not num_1.isdecimal():\n",
+    "    print(\"입력된 데이터는 숫자가 아닙니다. 다시 입력해주세요.\")\n",
+    "    input(\"input number : >\")\n",
+    "\n",
+    "num_2 = int(num_1)\n",
+    "\n",
+    "if num_2 < 0 : \n",
+    "    print (\"입력된 수는 음수입니다.\")\n",
+    "\n",
+    "if num_2 > 0 : \n",
+    "    print (\"입력된 수는 양수입니다.\")\n",
+    "\n",
+    "if num_2 == 0 : \n",
+    "    print (\"입력된 수는 0입니다.\")\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "65392f9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 날짜 / 시간 활용하기  \n",
+    "\n",
+    "import datetime # 모듈을 먼저 가져오고나서 다음 함수들을 진행해야 한다. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "82e32074",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021년 10월 29일 14시 10분\n"
+     ]
+    }
+   ],
+   "source": [
+    "now = datetime.datetime.now()\n",
+    "\n",
+    "print(\"{}년 {}월 {}일 {}시 {}분\".format(now.year, now.month, now.day, now.hour, now.minute))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "71d4dd6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정수를 입력하세요 :> 31234\n",
+      "짝수 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 정수 입력 받아 짝수인지 확인 후, 마지막 입력된 숫자가 0, 2, 4, 6, 8\n",
+    "\n",
+    "input_num = input(\"정수를 입력하세요 :> \")\n",
+    "last_char = input_num[-1]\n",
+    "last_num = int(last_char) \n",
+    "if last_num == 0 or last_num == 2 or last_num == 4 or last_num == 6 or last_num == 8 : \n",
+    "    print (\"짝수 입니다.\")\n",
+    "    \n",
+    "if last_num == 1 or last_num == 3 or last_num == 5 or last_num == 7 or last_num == 9 :\n",
+    "    print (\"홀수 입니다.\")\n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e1a0ee67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정수를 입력하세요3453462\n",
+      "짝수 입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 홀수 짝수 다시 고려하여 if 함수 적용\n",
+    "\n",
+    "input_num = int(input(\"정수를 입력하세요\"))\n",
+    "\n",
+    "if input_num % 2 != 0 : \n",
+    "    print (\"홀수 입니다.\")\n",
+    "    \n",
+    "else :\n",
+    "    print (\"짝수 입니다.\")\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59c9a358",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
