--- a/20211029.ipynb
+++ b/20211029.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "65392f9a",
    "metadata": {},
    "outputs": [],
@@ -310,18 +310,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "82e32074",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2021년 10월 29일 14시 10분\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "now = datetime.datetime.now()\n",
     "\n",
@@ -330,19 +322,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "71d4dd6e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "정수를 입력하세요 :> 31234\n",
-      "짝수 입니다.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 정수 입력 받아 짝수인지 확인 후, 마지막 입력된 숫자가 0, 2, 4, 6, 8\n",
     "\n",
@@ -355,24 +338,18 @@
     "if last_num == 1 or last_num == 3 or last_num == 5 or last_num == 7 or last_num == 9 :\n",
     "    print (\"홀수 입니다.\")\n",
     "    \n",
-    "    \n"
+    "if last_char in \"02468\" : \n",
+    "    print(\"짝수 입니다.\")\n",
+    "if last_char in \"13579\" : \n",
+    "    print(\"홀수 입니다.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "e1a0ee67",
+   "execution_count": null,
+   "id": "2bb124dd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "정수를 입력하세요3453462\n",
-      "짝수 입니다.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 홀수 짝수 다시 고려하여 if 함수 적용\n",
     "\n",
@@ -388,8 +365,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "3a1706b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "첫 번째 수를 입력하세요. >234823\n",
+      "두 번째 수를 입력하세요. >238234\n",
+      "234823, 238234\n",
+      "234823는 3의 배수가 아닙니다.\n",
+      "238234는 3의 배수가 아닙니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. 두 개의 숫자를 입력 받아 작은 수 부터 출력 \n",
+    "# 2. 작은 수와 큰 수가 각각에 대하여\n",
+    "# 3. 3의 배수이면, '3의 배수', 아니면 '3의 배수가 아닙니다.' 출력하도록 \n",
+    "\n",
+    "num_1 = int(input(\"첫 번째 수를 입력하세요. >\"))\n",
+    "num_2 = int(input(\"두 번째 수를 입력하세요. >\"))\n",
+    "            \n",
+    "if num_1 > num_2:\n",
+    "    print (\"{}, {}\".format(num_2, num_1))\n",
+    "            \n",
+    "else :\n",
+    "    print (\"{}, {}\".format(num_1, num_2))\n",
+    "\n",
+    "    \n",
+    "if num_1 % 3 == 0 : \n",
+    "    print (\"{}는 3의 배수입니다.\".format(num_1))\n",
+    "if num_2 % 3 == 0 :\n",
+    "    print (\"{}는 3의 배수입니다.\".format(num_2))\n",
+    "if num_1 % 3 != 0 : \n",
+    "    print (\"{}는 3의 배수가 아닙니다.\".format(num_1))\n",
+    "if num_2 % 3 != 0 : \n",
+    "    print (\"{}는 3의 배수가 아닙니다.\".format(num_2))\n",
+    "\n",
+    "            \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b634e11d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "조건에 맞지 않습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#if x > 10:\n",
+    "    #if x < 20:\n",
+    "        #print(\"조건에 맞습니다.\")\n",
+    "\n",
+    "x = 10\n",
+    "\n",
+    "if 10 < x < 20:\n",
+    "    print(\"조건에 맞습니다.\")\n",
+    "else :\n",
+    "    print(\"조건에 맞지 않습니다.\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "d747dc8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-10-29 15:25:42.582093\n",
+      "가을\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 날짜, 함수에서 월을 추출해서 현재의 계절을 출력\n",
+    "\n",
+    "\n",
+    "import datetime\n",
+    "\n",
+    "now = datetime.datetime.now() #모듈명이며, 클래스임. \n",
+    "\n",
+    "print(now)\n",
+    "\n",
+    "if 2 < now.month <= 5: \n",
+    "    print(\"봄\")\n",
+    "elif 5 < now.month <= 8:\n",
+    "    print(\"여름\")\n",
+    "elif 8 < now.month <= 11:\n",
+    "    print(\"가을\")\n",
+    "else :\n",
+    "    print(\"겨울\")\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "59c9a358",
+   "id": "dc3814ad",
    "metadata": {},
    "outputs": [],
    "source": []
