--- a/20211029.ipynb
+++ b/20211029.ipynb
@@ -215,22 +215,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "99fabc7d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# and or not == != > < <= >= \n",
     "\n",
-    "a = 10\n",
-    "b = 20\n",
+    "a = 10 ; b = 20\n",
     "print(a==b) # False\n",
     "print(a!=b) # True\n",
     "print(a>b) # False\n",
-    "print(a<b) # \n",
-    "print(a>=b)\n",
-    "print(a<=b)"
+    "print(a<b) # True\n",
+    "print(a>=b) # False\n",
+    "print(a<=b) # True\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "91a68efa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "if 문장 실행\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if 조건식 : => 조건식에 연관된 것은 들여쓰기하여 처리한다. \n",
+    "\n",
+    "if True : \n",
+    "    print(\"if 문장 실행\") # 실행됨. \n",
+    "\n",
+    "if False : \n",
+    "    print(\"if false 실행\") # 실행되지 않음. \n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5a8fb980",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "숫자를 입력하세요 >2\n",
+      "input number :    +2 \n",
+      "end\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# 정수를 입력 받아 10보다 작으면 입력된 값 출력\n",
+    "# 1. 정수 입력을 받음. \n",
+    "# 2. 숫자인지 확인 isnumeric() or isdecimal\n",
+    "# 3. 숫자이면 문자를 숫자로 변경\n",
+    "# 4. 10보다 작으면 출력 \n",
+    "\n",
+    "digit_1 = input(\"숫자를 입력하세요 >\")\n",
+    "\n",
+    "if digit_1.isdecimal():\n",
+    "    digit_1 = int(digit_1)\n",
+    "    if digit_1 < 10 : \n",
+    "        print(\"input number : {:+5d} \".format(digit_1))\n",
+    "\n",
+    "print(\"end\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "5358b9e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input number : >39\n",
+      "입력된 수는 양수입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 숫자를 입력 받아 실수로 변환한 후, \n",
+    "# 0보다 크면, 양수, 작으면 음수 0이면 zero를 출력 하세요. \n",
+    "\n",
+    "num_1 = input(\"input number : >\") \n",
+    "# input으로 입력되는 값은 모두 기본적으로 문자열이므로, 이를 int 또는 float으로 숫자 값으로 변경 필수\n",
+    "\n",
+    "if not num_1.isdecimal():\n",
+    "    print(\"입력된 데이터는 숫자가 아닙니다. 다시 입력해주세요.\")\n",
+    "    input(\"input number : >\")\n",
+    "\n",
+    "num_2 = int(num_1)\n",
+    "\n",
+    "if num_2 < 0 : \n",
+    "    print (\"입력된 수는 음수입니다.\")\n",
+    "\n",
+    "if num_2 > 0 : \n",
+    "    print (\"입력된 수는 양수입니다.\")\n",
+    "\n",
+    "if num_2 == 0 : \n",
+    "    print (\"입력된 수는 0입니다.\")\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65392f9a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82e32074",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71d4dd6e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
