--- a/20211105_class_review.ipynb
+++ b/20211105_class_review.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "515b8e32",
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-fddf0eea61ea>, line 6)",
+     "evalue": "invalid syntax (<ipython-input-1-7317bf1ff17e>, line 6)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-fddf0eea61ea>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    def __init__(self.num1, num2):\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-7317bf1ff17e>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    def __init__(self.num1, num2):\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -34,13 +34,69 @@
     "print(a.num1, a.num2)\n",
     "\n",
     "b = Aclass(30, 40)\n",
-    "print(b.num1, b.num2, b_get_sum())"
+    "print(b.num1, b.num2, b_get_sum())\n",
+    "\n",
+    "a_list = [a, b]\n",
+    "a_list[0].get_sum\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "e934be18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def input_data():\n",
+    "    name = input(\"name : \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "dd228491",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parent 클레스의 __init()__메서드가 호출되었습니다.\n",
+      "Child 클레스의 __init__메서드가 호출되었습니다.\n",
+      "Child 클레스의 test() 메서드입니다.\n",
+      "test\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 상속\n",
+    "\n",
+    "class Parent:\n",
+    "    def __init__(self):\n",
+    "        self.value = \"test\"\n",
+    "        print (\"Parent 클레스의 __init()__메서드가 호출되었습니다.\")\n",
+    "    def test(self):\n",
+    "        print (\"Parent 클레스의 test() 메서드입니다.\")\n",
+    "        \n",
+    "# 자식 클래스를 선언합니다. \n",
+    "\n",
+    "class Child(Parent):\n",
+    "    def __init__(self):\n",
+    "        Parent.__init__(self)\n",
+    "        print(\"Child 클레스의 __init__메서드가 호출되었습니다.\")\n",
+    "    def test(self):\n",
+    "        print(\"Child 클레스의 test() 메서드입니다.\")\n",
+    "    \n",
+    "# 자식 클래스의 인스턴스를 생성하고 부모의 메서드를 호출합니다. \n",
+    "child = Child() \n",
+    "child.test() \n",
+    "print(child.value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75dbec35",
    "metadata": {},
    "outputs": [],
    "source": []
